# nmh

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
nmh/: __main__.py  osutils.py  pathutils.py
nmh/git/: github.py
tests/: test_nmh.py
tests/git/: test_github.py
