[tool.poetry]
name = "nmh"
version = "0.1.0"
description = ""
authors = ["Huy tran <huy.td183768@sis.hust.edu.vn>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
